# constructai-taylor-model

./: __init__.py  pyproject.toml
taylor_model/: model.py
